force-app/main/default/objects/Customer_Onboarding_Field__c/Customer_Onboarding_Field__c.object-meta.xml
<CustomObject>
    <label>Customer Onboarding Field</label>
    <nameField>
        <displayFormat>COSQ-{0000}</displayFormat>
        <label>Customer Onboarding Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Onboarding Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>