force-app/main/default/objects/Customer_Onboarding_Field__c/fields/Field_Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Display_Label__c</fullName>
    <label>Field Display Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>