force-app/main/default/objects/Customer_Onboarding_Field__c/fields/Field_Display_Label_French__c.field-meta.xml
<CustomField>
    <fullName>Field_Display_Label_French__c</fullName>
    <label>Field Display Label (French)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>