force-app/main/default/objects/Customer_Onboarding_Field__c/fields/Object_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Object_Sort_Order__c</fullName>
    <formula>IF(
ISBLANK(Related_Object__c),
&quot;Case - &quot;&amp;TEXT(Sort_Order__c),
Related_Object__c&amp;&quot; - &quot;&amp;TEXT(Sort_Order__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Sort Order</label>
    <type>Text</type>
</CustomField>